--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "bootstrap": "^4.6.0",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.15.1",
+    "firebase": "^9.0.1",
+    "firebase-admin": "^9.11.1",
     "nuxt": "^2.15.7"
   },
   "devDependencies": {
