--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "core-js": "^3.15.1",
     "firebase": "^9.0.1",
     "firebase-admin": "^9.11.1",
-    "nuxt": "^2.15.7"
+    "nuxt": "^2.15.7",
+    "v-tooltip": "^2.1.3"
   },
   "devDependencies": {
     "@vue/test-utils": "^1.2.1",
